src/App.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Rajdhani:600');

:root {
  --red: rgb(204, 0, 0);
}

* {
  font-family: 'Rajdhani', sans-serif;
}

.App {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* background-image: url("https://i.imgur.com/ybtKvQ2.jpg"); */
}

.header-image {
  background-image: url("https://i.imgur.com/Io3QJqs.jpg");
  width: 100vw;
  height: 90vh;
  background-position: 70% 30%;
}

.nav {
  min-height: 78px;
  height: 10vh;
  width: 100vw;
  background-color: black;
  color: white;
  display: flex;
  align-items: center;
  justify-items: center;
  /* justify-content: space-around; */
  /* align-items: center; */
  position: sticky;
  top: 0;
}

.nav-content {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: 1;
  align-items: center;
  justify-items: center;
  width: 100%;
  /* display: none; */
}

.nav h2 {
  margin: 0;
  font-size: 30px;
}

.nav h2:hover {
  cursor: pointer;
}

.hamburger {
  height: 70px;
  width: 70px;
  /* display: flex; */
  flex-direction: column;
  justify-content: center;
  align-items: center;
  align-self: center;
  justify-self: flex-end;
  display: none;
  margin-right: 8%;
}

.hamburger:hover {
  cursor: pointer;
}

.line {
  min-width: 39px;
  width: 39px;
  height: 2px;
  background: white;
  margin-top: 2.5px;
  margin-bottom: 2.5px;
}

#mobile-img {
  display: none;
}

.show {
  height: 20vh;
  width: 100vw;
}

.hidden {
  display: none;
}

.open-menu {
  display: none;
  flex-direction: column;
  /* justify-content: flex-start; */
  text-align: left;
  position: fixed;
  top: 0;
  height: 100vh;
  width: 100vw;
  animation: menu-opening linear .5s;
  background: black;
  color: white;
}

.open-menu h1 {
  position: relative;
  left: 50px;
}

.open-menu h2 {
  position: relative;
  left: 50px;
}

.open-menu h1:hover {
  cursor: pointer;
}

.open-menu h2:hover {
  cursor: pointer;
}

.open-book {
  color: var(--red);
}

#x-button {
  height: 100px;
  width: 100px;
}

.x-lines {
  height: 2px;
  width: 100px;
  background: white;
  position: relative;
  left: 50px;
}

#x-one {
  transform: rotate(45deg)
}

#x-two {
  transform: rotate(135deg)
}

@keyframes menu-opening {
  0% {
    right: -100vw;
  }

  100% {
    right: 0;
  }
}


.body {
  width: 85%;
  align-self: center;
  /* background: #ddd; */
  /* background-image: url("https://i.imgur.com/ybtKvQ2.jpg"); */
  background-size: cover;
  background-position: center;
}

.caligraphy {
  display: flex;
  justify-content: center;
}

.body-cover {

}

.content {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-top: 100px;
}

.image {
  height: 500px;
  min-width: 300px;
  width: 100%;
  max-width: 500px;
  background-size: cover;
  background-position:center;
}

#omakase-image {
  background-image: url("https://i.imgur.com/vbV5Fms.png");
  justify-self: end;
}

#about-image {
  background-image: url("https://i.imgur.com/WZA5X3F.png");
  justify-self: start;
}

#press-image {
  background-image: url("https://i.imgur.com/voq1A4U.jpg");
  justify-self: end;
}

#press-text {
  justify-self: center;
  overflow-y: scroll;
}


.text-container {
  width: 70%;
  text-align: left;
  align-self: center;
}

.text-container h2 {
  font-family: "Rajdhani", sans-serif;
  font-size: 44px;
}

.text-container p {
  font-family: 'Open sans', sans-serif;
  /* font-size: 18px; */
}

#about-text {
  justify-self: center;
  /* align-self: end; */
}

#about-text p {
  margin-bottom: 0;
}

.backdrop {
  background-image: url("https://i.imgur.com/ybtKvQ2.jpg");
  opacity: .1;
  /* background: rgba(242, 230, 214, .5); */
  background-size: cover;
  background-position: center;
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  z-index: -1;
}

.locations {
  margin-top: calc(200px - 10vh);
  padding-top: 10vh;
  text-align: left;
}

.city-list {
  display: flex;
  flex-wrap: wrap;
  height: auto;
  justify-content: space-between;
}

.city-list p {
  font-size: 20px;
  padding-bottom: 10px;
}

.city-list p:hover {
  cursor: pointer;
}

.id-city {
  display: flex;
  align-items: center;
}

.selected {
  border-bottom: 2px solid var(--red);
}

.not-selected {
  border-bottom: 2px solid transparent;
}

.triangle {
  width: 0;
  height: 0;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-bottom: 7px solid var(--red);
  margin-bottom: 10px;
  margin-left: 10px;
  display: none;
}

.contact-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  text-align: left;
  justify-items: center;
  width: 90%;
}

.contact-city {
  width: 90%;
}

.city-container {
  display: grid;
  grid-template-columns: 50% 50%;
}

.restaurant-container {
  height: 812px;
  margin-top: 35px;
  min-width: 300px;
  width: 100%;
  max-width: 513px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.button {
  align-self: center;
  min-width: 31px;
  width: 50%;
  max-width: 141px;
  color: var(--red);
  border-radius: 50px;
  border: 2px solid var(--red);
  padding: 2px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 50px;
  font-size: 22px;
}

.button:hover {
  cursor: pointer;
}

#nav-book {
  font-size: 28px;
  width: 100%;
  margin-top: 0;
}

#restaurant-container-one {
  justify-self: start;
}

#restaurant-container-two {
  justify-self: end;
}

.restaurant-image-one {
  /* min-width: 300px; */
  width: 100%;
  max-width: 513px;
  height: 406px;
  background-image: url("https://i.imgur.com/Io3QJqs.jpg");
  background-size: cover;
  background-position: center;
}

.restaurant-image-two {
  /* min-width: 300px; */
  width: 100%;
  max-width: 513px;
  height: 406px;
  background-size: cover;
  background-position: center;
}

#ny-one {
  background-image: url("https://i.imgur.com/StkJLnj.jpg");
}

#ny-two {
  background-image: url("https://i.imgur.com/bI5UyMn.jpg");
}

#la-one {
  background-image: url("https://i.imgur.com/tju1F37.jpg");
}

#la-two {
  background-image: url("https://i.imgur.com/tju1F37.jpg");
}

#to-one {
  background-image: url("https://i.imgur.com/0Viln3T.jpg");
}
#hk-one {
  background-image: url("https://i.imgur.com/q3xUCxM.jpg");
}

#bk-one {
  background-image: url("https://i.imgur.com/7QKAhE7.jpg");
}

#hk-info {
  grid-column-start: 1;
  grid-column-end: 3;
  justify-self: center;
}

#center-city {
  grid-column-start: 1;
  grid-column-end: 3;
  justify-self: center;
}

.restaurant-text {
  display: grid;
  grid-template-columns: 50% 50%;
  width: 75%;
  align-self: center;
  /* height: 500px; */
}

.restaurant-text h2 {
  grid-column-start: 1;
  grid-column-end: 3;
  justify-self: center;
}

.restaurant-text p {
  margin: 0;
  font-family: "Open sans", sans-serif;
  font-size: 14px;
}

.contact-info {
  text-align: left;
}

.hours {
  text-align: left;
  justify-self: end;
}

#press-text {
  align-self: start;
  justify-self: start;
  height: 100%;
  max-height: 500px;
}

#press h2 {
  margin-top: 0;
}

#press-description {
  height: 100%;
}

#press-description p {
  margin: 0;
}

#press-description a {
  color: var(--red);
  text-decoration: none;
}

.footer {
  min-height: 567px;
  height: auto;
  background: black;
  margin-top: 100px;
  color: white;
  display: grid;
  justify-items: center;
}

.footer h2 {
  align-self: center;
}

.nav img {
  height: 14vh;
  min-height: 100px;
}

.nav img:hover {
  cursor: pointer;
}

@media only screen and (max-width: 1230px) {
  .city-container {
    grid-template-columns: 1fr;
  }

  #restaurant-container-one {
    justify-self: center;
  }

  #restaurant-container-two {
    justify-self: center;
  }

  .restaurant-container {
    min-width: 300px;
    width: 100%;
    max-width: 513px;
  }

  /* .header-image {
    height: 100vh;
  }

  .nav {
    position: fixed;
    top: 0;
    height: 78px;
  } */

  /* .restaurant-image-one {
    min-width: 300px;
    width: 100%;
  } */
}

@media only screen and (max-width: 1100px) {
  .nav-content {
    display: none;
  }

  .hamburger {
    display: flex;
  }

  .nav {
    flex-direction: row-reverse;
    background-color: black;
    position: fixed;
    top: 0;
  }

  .header-image {
    height: 100vh;
  }

  #mobile-img {
    display: block;
    justify-self: flex-start;
    position: fixed;
    left: 9%;
  }

  .open-menu {
    display: flex;
  }
}

@media only screen and (max-width: 760px) {
  .city-list {
    flex-direction: column;
  }

  .triangle {
    display: block;
  }

  .content {
    grid-template-columns: 1fr;
  }

  #about-image {
    grid-row-start: 2;
    justify-self: center;
  }

  #omakase-image {
    justify-self: center;
  }

  .text-container {
    width: 100%;
  }

  #about-text p {
    margin-bottom: 1em;
  }

  #press-image {
    margin-top: 50px;
  }
}

@media only screen and (max-width: 500px) {
  .body {
    width: 98%;
  }
}

